# INSP-meta-algorithm

./: .gitignore  DEBUG_GREEDY_TRACE.py  Distributed_Graph_Matching_Presentation.md  README.md  add_ga_run.py  debug_matching.ipynb  pyproject.toml  requirements.txt  verify_edges.ipynb  visualization.ipynb
docs/: ALGORITHM_FLOW.md  CANONICAL_VECTOR.md  COMMUNICATION.md  GENETIC_ALGORITHM.md  GRAPH.md  GREEDY_MATCHING.md  INDEX.md  ITAI_ISRAELI.md  LUBY_RANDOMIZED.md  META_ALGORITHM.md  METRICS.md  NOTEBOOKS.md  SCHEDULER.md  STATE.md  VISUALIZATION.md
notebooks/: 01_itai_israeli.ipynb  02_greedy_matching.ipynb  03_luby_randomized.ipynb  analysis_seed_43.ipynb  test_meta_algorithm.ipynb
notebooks/helpers/: README.md  __init__.py
results/: index.html  serve_dashboard.py
results/jsons/: experiment_20260717_150919.json  experiment_20260717_170530.json  experiment_20260720_115623.json  experiment_20260721_105410.json  experiment_20260721_141852.json  experiment_20260721_155906.json  experiment_20260721_160406.json  experiment_20260721_163728.json  experiment_20260721_171656.json
src/: __init__.py  node_parameter_controller.py  node_service.py  node_service_with_learning.py
src/algorithms/: __init__.py  base.py  local_algorithm_adapter.py
src/communication/: __init__.py  async_message_handler.py  in_memory_transport.py  message.py  message_queue.py  node_communicator.py  semantic_message.py  transport.py  transport_driver.py  transport_interface.py
src/config/: __init__.py  distributed_algorithm_config.py  experiment_config.py
tests/: __init__.py  conftest.py
(+142 files in other folders)
